Bug 827405 - Lazily "activate" download items when they enter the visible richlistbox area. r=Mano
UltraBlame original commit: 303b3bb5f27fe7af58ec9bc689ad8325bac5779a

--- a/browser/components/downloads/content/allDownloadsViewOverlay.css
+++ b/browser/components/downloads/content/allDownloadsViewOverlay.css
@@ -1,8 +1,8 @@
 
 
 
- 
-richlistitem.download {
+
+richlistitem.download[active] {
   -moz-binding: url('chrome://browser/content/downloads/download.xml#download-full-ui');
 }
 
